--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,5 @@
+<app-menu></app-menu>
 
 <div class="container">
-
-  <h1>ButResto <i class="fa-solid fa-burger"></i></h1>
-  <h2>le resto qu'il vous faut ! </h2>
-
-
-  <p>
-
-     Ouverture prochaine !<br>
-     Les étudiants travaillent activement sur le projet...
-  </p>
-
-  <router-outlet />
-
+  <router-outlet></router-outlet>
 </div>
