--- a/src/app/menus/menu-edit/menu-edit.component.html
+++ b/src/app/menus/menu-edit/menu-edit.component.html
@@ -1,1 +1,29 @@
-<p>menu-edit works!</p>
+<div class="mt-4">
+  <h2>{{this.menu.id == 0 ? "Nouveau Menu" : "Modifier votre Menu"}}</h2>
+
+
+  <form class="mt-4" #formulaire="ngForm" (ngSubmit)="onSubmit(formulaire)">
+    <div class="form-group w-75">
+      <label class="ms-3" for="nom"><b>Nom</b></label>
+      <input [(ngModel)]="menu.nom" type="text" name="nom" id="nom" class="form-control rounded-pill" required minlength="5" maxlength="20">
+    </div>
+    <div class="form-group mt-2 w-25">
+      <label class="ms-3" for="statut"><b>Statut</b></label>
+      <select [(ngModel)]="menu.statut" name="statut" id="statut" class="form-control rounded-pill" required>
+        <option
+          *ngFor="let statut of statutMenu | keyvalue"
+          [value]="statut.value"
+        >{{statut.value}}</option>
+      </select>
+    </div>
+    <div class="form-group mt-2 w-75">
+      <label for="description"><b>Description</b></label>
+      <textarea [(ngModel)]="menu.description" name="description" id="description" cols="30" rows="3" class="form-
+      control w-100" maxlength="256"></textarea>
+    </div>
+    <div class="d-flex btn-group mt-4 gap-4 w-50 justify-content-evenly">
+      <button class="btn btn-success" type="submit" [disabled]="formulaire.invalid">{{this.menu.id == 0 ? "Créer le Menu" : "Modifier ce Menu"}}</button>
+      <a routerLink="/menus" class="btn btn-warning">Annuler</a>
+    </div>
+  </form>
+</div>
