--- a/src/app/menus/menu-item/menu-item.component.html
+++ b/src/app/menus/menu-item/menu-item.component.html
@@ -1,1 +1,9 @@
-<p>menu-item works!</p>
+<li class="list-group-item w-50">
+  <div class="d-flex justify-content-between">
+    <p><b>{{menu.nom}}</b> - {{menu.statut}}</p>
+    <div class="d-flex justify-content-end">
+      <a class="btn" routerLink="/menus/{{menu.id}}/plats"> <i class="fa-solid fa-magnifying-glass text-dark"></i> </a>
+      <a class="btn" routerLink="/menus/edit/{{menu.id}}"> <i class="fa-solid fa-pen text-dark"></i> </a>
+    </div>
+  </div>
+</li>
