--- a/src/app/plat/plat-item/plat-item.component.html
+++ b/src/app/plat/plat-item/plat-item.component.html
@@ -1,8 +1,8 @@
 <li class="w-50">
   <div class="d-flex justify-content-between">
-    <p><b>{{plat.nom}}</b> - {{plat.calorie}}</p>
+    <p><b>{{plat.nom}}</b> - {{plat.calories}} calories</p>
     <div class="d-flex justify-content-end">
-      <a class="btn" routerLink="/menus/{menu.id}/edit/{{plat.id}}"> <i class="fa-solid fa-pen text-dark"></i> </a>
+      <a class="btn" routerLink="/menus/{{plat.menuId}}/plats/edit/{{plat.id}}"><i class="fa-solid fa-pen text-dark"></i></a>
     </div>
   </div>
 </li>
