--- a/src/app/menus/menu-item/menu-item.component.html
+++ b/src/app/menus/menu-item/menu-item.component.html
@@ -4,6 +4,7 @@
     <div class="d-flex justify-content-end">
       <a class="btn" routerLink="/menus/{{menu.id}}/plats"> <i class="fa-solid fa-magnifying-glass text-dark"></i> </a>
       <a class="btn" routerLink="/menus/edit/{{menu.id}}"> <i class="fa-solid fa-pen text-dark"></i> </a>
+      <a class="btn" (click)="onDelete()"> <i class="fa-solid fa-trash-can text-dark"></i> </a>
     </div>
   </div>
 </li>
