--- a/src/app/plat/plat-item/plat-item.component.html
+++ b/src/app/plat/plat-item/plat-item.component.html
@@ -3,6 +3,7 @@
     <p><b>{{plat.nom}}</b> - {{plat.calories}} calories</p>
     <div class="d-flex justify-content-end">
       <a class="btn" routerLink="/menus/{{plat.menuId}}/plats/edit/{{plat.id}}"><i class="fa-solid fa-pen text-dark"></i></a>
+      <a class="btn" (click)="onDelete()"><i class="fa-solid fa-trash-can text-dark"></i></a>
     </div>
   </div>
 </li>
