done + datalist (revoir dynamic loading component)

--- a/src/app/plat/plat-edit/plat-edit.component.html
+++ b/src/app/plat/plat-edit/plat-edit.component.html
@@ -5,7 +5,14 @@
   <form class="mt-4" #formulaire="ngForm" (ngSubmit)="onSubmit(formulaire)">
     <div class="form-group w-75">
       <label class="ms-3" for="nom"><b>Nom</b></label>
-      <input [(ngModel)]="plat.nom" type="text" name="nom" id="nom" class="form-control rounded-pill" required minlength="5" maxlength="50">
+      <input [(ngModel)]="plat.nom" type="text" name="nom" id="nom" list="type-plats" class="form-control rounded-pill" required minlength="2" maxlength="50">
+        <div *ngIf=" (typesPlats | async) as listeTypesPlats">
+          <datalist id="type-plats">
+            <option
+            *ngFor="let tp of listeTypesPlats"
+            [value]="tp.nom"></option>
+          </datalist>
+        </div>
     </div>
     <div class="form-group mt-2 w-25">
       <label class="ms-3" for="calories"><b>Calories</b></label>
@@ -13,7 +20,14 @@
     </div>
     <div class="d-flex btn-group mt-4 gap-4 w-50 justify-content-evenly">
       <button class="btn btn-success" type="submit" [disabled]="formulaire.invalid">{{this.plat.id == 0 ? "Créer le Plat" : "Modifier ce Plat"}}</button>
-      <a routerLink="/menus" class="btn btn-warning">Annuler</a>
+      <div>
+        <div *ngIf="this.plat.id == 0; else elseBlock">
+          <a routerLink="/menus" class="btn btn-warning">Annuler</a>
+        </div>
+        <ng-template #elseBlock>
+          <a routerLink="/menus/{{this.plat.menuId}}/plats" class="btn btn-warning">Annuler</a>
+        </ng-template>
+      </div>
     </div>
   </form>
 </div>
