test build + boutons retour

--- a/src/app/menus/menu-detail/menu-detail.component.html
+++ b/src/app/menus/menu-detail/menu-detail.component.html
@@ -9,4 +9,5 @@
   <app-plat-list></app-plat-list>
 
   <a routerLink="/menus/{{menu.id}}/plats/new" class="btn btn-info mt-4 rounded-pill">Ajouter un plat</a>
+  <a routerLink="/menus" class="btn btn-warning mt-2 rounded-pill">Retour</a>
 </div>
