--- a/src/app/menus/menu-list/menu-list.component.html
+++ b/src/app/menus/menu-list/menu-list.component.html
@@ -6,4 +6,5 @@
       [menu] = "menu"></app-menu-item>
   </ul>
   <a routerLink="/menus/new" class="btn btn-info mt-4 rounded-pill">Nouveau Menu</a>
+  <a routerLink="/" class="btn btn-warning mt-2 rounded-pill">Retour</a>
 </div>
